--- a/AddressBook/Views/Home/Create.cshtml
+++ b/AddressBook/Views/Home/Create.cshtml
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -12,73 +13,73 @@
     {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <h2 class="page-name">Create New Contact</h2>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.Label("Name", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.fullName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.fullName, "", new { @class = "text-danger" })
-                </div>
+    <div class="form-horizontal">
+        <h2 class="page-name">Create New Contact</h2>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.Label("Name", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.fullName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.fullName, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.Label("NickName ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.nickName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.nickName, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.Label("NickName ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.nickName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nickName, "", new { @class = "text-danger" })
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.Label("Email ID", htmlAttributes: new { @class = "control-label col-md-2", placeholder = "example@xyz.com" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.emailID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.emailID, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.Label("Email ID", htmlAttributes: new { @class = "control-label col-md-2", placeholder = "example@xyz.com" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.emailID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.emailID, "", new { @class = "text-danger" })
             </div>
+        </div>
 
 
-            <div class="form-group">
-                @Html.Label("DOB ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control", placeholder = "MM/dd/yyyy" } })
-                    @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
-                </div>
-
-            </div>
-
-            <div class="form-group">
-                @Html.Label("Address ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.Label("Image Path ", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" title="Upload Image" id="file" name="file" />
-                    @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div>
-                @Html.Partial("_PhoneNumbers", new ViewDataDictionary())
-            </div>
-
-        <label id="error" class = "text-danger"></label>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <button id="create" class="btn btn-default">Create</button>
-                    @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default" })
-                </div>
-
+        <div class="form-group">
+            @Html.Label("DOB ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.dob, new { htmlAttributes = new { @class = "form-control", placeholder = "MM/dd/yyyy" } })
+                @Html.ValidationMessageFor(model => model.dob, "", new { @class = "text-danger" })
             </div>
 
         </div>
+
+        <div class="form-group">
+            @Html.Label("Address ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Image Path ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" title="Upload Image" id="file" name="file" />
+                @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div>
+            @Html.Partial("_PhoneNumbers", new ViewDataDictionary())
+        </div>
+
+        <label id="error" class="text-danger"></label>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button id="create" class="btn btn-default">Create</button>
+                @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default" })
+            </div>
+
+        </div>
+
+    </div>
     }
 
     <script>
@@ -111,28 +112,32 @@
                     "phoneNumbers": jsonObj
                 };
 
-        $.ajax({
-            url: "/api/Contacts/",
-            method: "POST",
-            data: data,
-            async: false,
-            success: function (data) {
-               
-            },
-            //error: function (xhr, ajaxOptions, thrownError) {
-            //    if (xhr.status == 404) {
-            //        alert(thrownError);
-            //        alert("Error occured");
-            //        $('#someText').text('Cannot find this record');
-            //    }
-            //}
-            error: function (request, message, error) {
-                if (request.responseJSON != null) {
-                    $('#error').text(request.responseJSON.Message);
-                }
+                $.ajax({
+                    url: "/api/Contacts/",
+                    method: "POST",
+                    data: data,
+                    async: false,
+                    success: function (data) {
+                        alert("Created Successfully.");
+                        window.location.href = '/Home/Index';
 
-            }
-        });
+                    },
+                    //error: function (xhr, ajaxOptions, thrownError) {
+                    //    if (xhr.status == 404) {
+                    //        alert(thrownError);
+                    //        alert("Error occured");
+                    //        $('#someText').text('Cannot find this record');
+                    //    }
+                    //}
+                    error: function (request, message, error) {
+                        if (request.responseJSON != null && request.status == 400) {
+                            $('#error').text(request.responseJSON.Message);
+                            //alert(request.responseJSON.Message)
+                        }
+
+
+                    }
+                });
 
             })
         })
